[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/OptionMenu.tscn" type="PackedScene" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
level_scene_path = "res://world_item/levels/TestLevel.tscn"
training_scene_path = "res://world_item/levels/TrainingLevel.tscn"

[node name="ColumnContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true,
"_edit_vertical_guides_": [  ]
}

[node name="MarginContainer" type="MarginContainer" parent="ColumnContainer"]
margin_right = 262.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.24
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ColumnContainer/MarginContainer"]
margin_left = 20.0
margin_right = 262.0
margin_bottom = 768.0
custom_constants/separation = 11
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTraining" type="Button" parent="ColumnContainer/MarginContainer/VBoxContainer"]
margin_top = 293.0
margin_right = 242.0
margin_bottom = 330.0
text = "Start Training"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTesting" type="Button" parent="ColumnContainer/MarginContainer/VBoxContainer"]
margin_top = 341.0
margin_right = 242.0
margin_bottom = 378.0
text = "Start Testing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="Button" parent="ColumnContainer/MarginContainer/VBoxContainer"]
margin_top = 389.0
margin_right = 242.0
margin_bottom = 426.0
text = "Option"

[node name="Exit" type="Button" parent="ColumnContainer/MarginContainer/VBoxContainer"]
margin_top = 437.0
margin_right = 242.0
margin_bottom = 474.0
text = "Exit"

[node name="MarginContainer2" type="MarginContainer" parent="ColumnContainer"]
margin_left = 270.0
margin_right = 1366.0
margin_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="OptionMenu" parent="ColumnContainer/MarginContainer2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 20.0
margin_right = 1076.0
margin_bottom = 748.0

[connection signal="pressed" from="ColumnContainer/MarginContainer/VBoxContainer/StartTraining" to="." method="_on_StartTraining_pressed"]
[connection signal="pressed" from="ColumnContainer/MarginContainer/VBoxContainer/StartTesting" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="ColumnContainer/MarginContainer/VBoxContainer/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="ColumnContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
